--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -455,3 +455,48 @@
 	url = {https://eprint.iacr.org/2002/126},
 }
 
+@techreport{goguen-et-al-1973,
+	author = {J. A. Goguen and J. W. Thatcher and E. G. Wagner and J. B. Wright},
+	year = {1973},
+	title = {A Junction between Computer Science and Category Theory},
+	url = {
+	       https://dominoweb.draco.res.ibm.com/49eae98dc5a21de0852574ff005001c8.html
+	       },
+	publisher = {IBM Research},
+}
+
+@article{meseguer-montanari-1990,
+	title = {Petri nets are monoids},
+	journal = {Information and Computation},
+	volume = {88},
+	number = {2},
+	pages = {105-155},
+	year = {1990},
+	issn = {0890-5401},
+	doi = {https://doi.org/10.1016/0890-5401(90)90013-8},
+	url = {https://www.sciencedirect.com/science/article/pii/0890540190900138},
+	author = {José Meseguer and Ugo Montanari},
+	abstract = {Petri nets are widely used to model concurrent systems. However,
+	            their composition and abstraction mechanisms are inadequate: we
+	            solve this problem in a satisfactory way. We start by remarking
+	            that place/transition Petri nets can be viewed as ordinary,
+	            directed graphs equipped with two algebraic operations
+	            corresponding to parallell and sequential composition of
+	            transitions. A distributive law between the two operations captures
+	            a basic fact about concurrency. New morphisms are defined, mapping
+	            single, atomic transitions into whole computations, thus relating
+	            system descriptions at different levels of abstraction. Categories
+	            equipped with products and coproducts (corresponding to parallel
+	            and nondeterministic compositions) are introduced for Petri nets
+	            with and without initial markings. Petri net duality is expressed
+	            as a duality functor, and several new invariants are introduced. A
+	            tensor product is defined on nets, and their category is proved to
+	            be symmetric monoidal closed. This construction is generalized to a
+	            large class of algebraic theories on graphs. These results provide
+	            a formal basis for expressing the semantics of concurrent languages
+	            in terms of Petri nets. They also provide a new understanding of
+	            concurrency in terms of algebraic structures over graphs and
+	            categories that should apply to other models besides Petri nets and
+	            thus contribute to the conceptual unification of concurrency.},
+}
+
