--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -6,6 +6,7 @@
 \usepackage{amsxtra}
 
 \usepackage{todonotes}
+\usepackage{multicol}
 
 % fonts
 \usepackage{bbm}
@@ -65,6 +66,9 @@
 	asymptotics,
 	keys
 ]{cryptocode}
+
+% cross-reference format
+\creflabelformat{equation}{#2#1#3}
 
 % quality of life
 \renewcommand{\emptyset}{\varnothing}
