--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -29,6 +29,11 @@
 
 \input{prelude}
 
+\RequirePackage[T1]{fontenc}
+\RequirePackage[tt=false, type1=true]{libertine}
+\RequirePackage[varqu]{zi4}
+\RequirePackage[libertine]{newtxmath}
+
 \begin{document}
 
 \maketitle
